=== HEAD

* Make Database#sequence_for_table on Oracle handle cases where the schema for a table cannot be determined (jeremyevans)

* The boolean_readers, boolean_subsets, and class_table_inheritance plugins no longer do blind rescues (jeremyevans) (#1162)

* Add Model.require_valid_table setting, if set to true doesn't swallow any errors for invalid tables (jeremyevans)

* Creating model classes inside a transaction when the table doesn't exist no longer rolls back the transaction on PostgreSQL (jeremyevans) (#1160)

* Sequel::Model no longer swallows many errors when subclassing or setting datasets (jeremyevans) (#1160)

* Handle altering column NULL settings for varchar(max) and text columns on MSSQL (Ilja Resch)

* Remove Sequel.firebird and Sequel.informix adapter methods (jeremyevans)

* Make graph_each extension handle result set splitting when using Dataset#first (jeremyevans)

* Allow raising Sequel::ValidationFailed and Sequel::HookFailed without an argument (jeremyevans)

* Allow schema_dumper to handle :qualify=>true option on PostgreSQL (jeremyevans)

* Allow foreign_key schema method to handle SQL::Identifier and SQL::QualifiedIdentifier as 2nd argument (jeremyevans)

=== 4.32.0 (2016-03-01)

* Use mutex for synchronizing access to association reflection cache on MRI (jeremyevans)

* Add Dataset#delete_from on MySQL, allowing deletions from multiple tables in a single query (jeremyevans) (#1146)

* Add no_auto_literal_strings extension, which makes SQL injection vulnerabilities less likely (jeremyevans)

* Add Model.default_association_options, for setting option defaults for all future associations (jeremyevans)

* Support :association_pks_nil association option in association_pks setter for determining how to handle nil (jeremyevans)

* Make association_pks setter handle empty array correctly when :delay_pks is set (jeremyevans)

* Add a setter method for one_through_one associations (jeremyevans)
