@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Database#transaction :savepoint=>:only option, for only creating a savepoint if already inside a transaction (jeremyevans)
+
 * Make Database#sequence_for_table on Oracle handle cases where the schema for a table cannot be determined (jeremyevans)
 
 * The boolean_readers, boolean_subsets, and class_table_inheritance plugins no longer do blind rescues (jeremyevans) (#1162)
